--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,11 @@
 [submodule "vim/bundle/vundle"]
 	path = vim/bundle/vundle
 	url = git://github.com/gmarik/vundle.git
+[submodule "vim/bundle/YankRing.vim"]
+	path = vim/bundle/YankRing.vim
+	url = https://github.com/vim-scripts/YankRing.vim.git
+    ignore = all
+[submodule "vim/bundle/ZoomWin"]
+	path = vim/bundle/ZoomWin
+	url = https://github.com/vim-scripts/ZoomWin.git
+    ignore = all
