--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 	path = vim/bundle/ZoomWin
 	url = https://github.com/vim-scripts/ZoomWin.git
     ignore = all
+[submodule "vim/bundle/tabular"]
+	path = vim/bundle/tabular
+	url = https://github.com/godlygeek/tabular.gi
