--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,7 @@
 	path = vim/bundle/ZoomWin
 	url = https://github.com/vim-scripts/ZoomWin.git
     ignore = all
+[submodule "vim/bundle/gundo.vim"]
+	path = vim/bundle/gundo.vim
+	url = https://github.com/sjl/gundo.vim.git
+    ignore = all
