--- a/tmux.conf
+++ b/tmux.conf
@@ -13,3 +13,4 @@ bind C-d choose-buffer "run \"tmux save-buffer -b %% - | xclip -i\" \; run \" tm
 bind C-f run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer" \; run "tmux display \"Copied from \(*\) $(xclip -o | dd ibs=1 obs=1 status=noxfer count=80 2> /dev/null)... \""
 
 #}}}
+bind-key e kill-session
