--- a/irssi/config
+++ b/irssi/config
@@ -4,6 +4,7 @@ servers = (
     chatnet = "freenode";
     port = "6667";
     autoconnect = "yes";
+    password="{PASSWORD}";
   },
   {
       address = "irc.oftc.net";
