Use VIM keyboard shortcuts to navigate windows

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,11 @@
 set -g default-terminal "screen-256color"
 
+set-window-option -g mode-keys vi
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 # integration with clipboard and primary selection {{{
 
 # C-c: save into system clipboard (+). With preselection.
@@ -14,3 +20,4 @@ bind C-f run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer" \; run "tmux d
 
 #}}}
 bind-key e kill-session
+
