--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,8 @@
 set -g default-terminal "screen-256color"
 
 set-window-option -g mode-keys vi
+set -g history-limit 30000
+
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
