Add xonsh as default shell for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,4 @@
 set -g default-terminal "xterm-256color"
-
 set-window-option -g mode-keys vi
 set -g history-limit 30000
 
@@ -23,3 +22,5 @@ bind C-f run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer" \; run "tmux d
 #}}}
 bind-key e kill-session
 
+# By default use xonsh
+set -g default-shell /usr/bin/xonsh
