--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "config/awesome"]
 	path = config/awesome
-	url = https://github.com/abele/awesome-wm-config.git
+	url = git@github.com:abele/awesome-wm-config.git
